deploy/manifests/ingress/nginx-inc.yml
# Copyright 2020 HAProxy Technologies LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-inc
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx-inc
spec:
  tls:
  - hosts:
    - nginx-inc.default
    secretName: nginx-inc
  rules:
  - host: nginx-inc.default
    http:
      paths:
      - backend:
          serviceName: echo
          servicePort: http
