deploy/manifests/ingress/nginx.yml
# Copyright 2020 HAProxy Technologies LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - nginx.default
    secretName: nginx
  rules:
  - host: nginx.default
    http:
      paths:
      - backend:
          service:
            name: echo
            port:
              name: http
